tests/ui/parse/pub_crate_rejected.rx
//@ spec: RXS-0013
pub(crate) fn f() {} //~ ERROR RX0008
